# SVD-Thesis

./: .gitignore  CMakeLists.txt  README.md
data/: CUDA_error.agr  CUDA_times.agr  LAPACK_error.agr  LAPACK_times.agr  OMP_CUDA_error.agr  OMP_CUDA_times.agr  OMP_LAPACK_CUDA_error.agr  OMP_LAPACK_CUDA_times.agr  OMP_LAPACK_error.agr  OMP_LAPACK_times.agr  OMP_error.agr  OMP_times.agr  svd.csv
lib/: HouseholderMethods.cu  HouseholderMethods.cuh  JacobiMethods.cu  JacobiMethods.cuh  Matrix.cuh  Utils.cu  Utils.cuh  global.cuh
others/bidiagonal_multiplication/: bidiagonal_multiplication.py
others/block_cyclic_distribution/: block_cyclic_distribution.py
others/comportamiento_block_qr_householder/: comportamiento_block_qr_householder.py
others/comportamiento_cpp/: condicion-istop.py
others/distribucion_pruebas_cpp/: prueba.cpp
others/ordenamiento_jacobi/: ordenamiento_jacobi.py
others/torque_scripts/: torque_compilation.sh
reports/: 1_iteracion_triangular_superior.txt  cuda_svd_jacobi_5000_10000.txt  maximo_iteraciones_error.txt  reporte-02-03-2023-15-16-13.txt  reporte-02-03-2023-15-16-52.txt  reporte-02-03-2023-15-17-49.txt  reporte-11-04-2023-13-55-43.txt  reporte-11-04-2023-15-46-44.txt  reporte-11-04-2023-16-21-47.txt  reporte-12-04-2023-15-39-54.txt  reporte_completo.txt  reporte_completo_kernel_1_iteracion.txt  reporte_lapack_jacobi.txt  tiempo_1000_5000_cuda.txt  tiempo_1000_5000_limitador_frecuencia.txt  tiempo_1_iteracion_1000_5000.txt
src/: main.cu
tests/: Tests.cu  Tests.cuh
